2013-07-07  Richard Sandiford  <rdsandiford@googlemail.com>

	* gas/mips/vr5400-ill.s, gas/mips/vr5400-ill.l: New test.
	* gas/mips/mips.exp: Run it.

2013-07-07  Richard Sandiford  <rdsandiford@googlemail.com>

	* gas/mips/lb.d, gas/mips/sb.d: Use coprocessor register names
	for LWC0 and SWC0.

2013-07-05  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gas/s390/zarch-zEC12.s: Change bprp second operand and add
	variants requiring relocations.
	* gas/s390/zarch-zEC12.d: Likewise.

2013-07-03  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* gas/aarch64/reloc-insn.s (func): Replace :got_prel19: with :got:.

2013-06-26  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/ilp32-basic.d: New file.
	* gas/aarch64/ilp32-basic.s: New file.

2013-06-25  Maciej W. Rozycki  <macro@codesourcery.com>

	* gas/mips/micromips-insn32.d: New test.
	* gas/mips/micromips-noinsn32.d: Likewise.
	* gas/mips/micromips.l: Rename to...
	* gas/mips/micromips-warn.l: ... this.
	* gas/mips/micromips.d: Update accordingly.
	* gas/mips/micromips-trap.d: Likewise.
	* gas/mips/micromips.l: New list test.
	* gas/mips/micromips.s: Add conditionals.
	* gas/mips/mips.exp: Run the new tests.

2013-06-24  Roland McGrath  <mcgrathr@google.com>

	* gas/arm/macro-vld1.s: Add a case with whitespace before '}'.
	* gas/arm/macro-vld1.d: Update.

	* gas/arm/macro-pld.s: Add a 'push {r0}' case.
	* gas/arm/macro-pld.d: Update expected output.
	* gas/arm/macro-vld1.s: New file.
	* gas/arm/macro-vld1.d: New file.

2013-06-22  Richard Sandiford  <rdsandiford@googlemail.com>

	* gas/mips/mips.exp: Remove "LOSE" comments.
	(run_dump_test_arch): Remove format selector support.
	(run_dump_test_arches): Remove associated upvars.
	(elf, ecoff, aout, no_mips16, no_micromips): Remove variables.
	Remove all conditions based on them, on the assumption that $elf
	is true and the others are false.  Rename "elf-jal" to "jal".
	(tmips): Set to "t" for *bsd targets.
	* gas/mips/elf-jal.d: Rename to...