@@ -159,7 +159,9 @@ const struct mips_opcode mips16_opcodes[] =
 {"dsubu",   "y,j",	0, (int) M_DSUBU_I_2, INSN_MACRO, 0,	I1 },
 {"exit",    "L",	0xed09, 0xff1f, TRAP,		0,	I1 },
 {"exit",    "L",	0xee09, 0xff1f, TRAP,		0,	I1 },
+{"exit",    "",		0xef09, 0xffff, TRAP,		0,	I1 },
 {"exit",    "L",	0xef09, 0xff1f, TRAP,		0,	I1 },
+{"entry",   "",		0xe809, 0xffff, TRAP,		0,	I1 },
 {"entry",   "l",	0xe809, 0xf81f, TRAP,		0,	I1 },
 {"extend",  "e",	0xf000, 0xf800, 0,		0,	I1 },
 {"jalr",    "x",	0xe840, 0xf8ff, UBD|WR_31|RD_x,	0,	I1 },
