@@ -1,5 +1,10 @@
 2013-07-07  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* mips16-opc.c: Add entries for argumentless "entry" and "exit"
+	instructions.
+
+2013-07-07  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	* mips-opc.c (mips_builtin_opcodes): Use "Q" for the INSN_5400
 	MDMX-like instructions.
 	* mips-dis.c (print_insn_arg): Use "$f" rather than "$v" when
